# Sounder5

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  python-app.yml
src/: .dockerignore  Dockerfile  Dockerfile.dev  Sounder5.py  Updater.py  build_sounder.py  build_update.py  convert.py  docker-compose.yml  requirements.txt
src/Components/: ComboBox.py  Debugger.py  DirWatcher.py  FontManager.py  OLDDebugger.py  Setup.py  SongMenu.py  SystemTheme.py  le.pyd
src/Components/TkDeb/: TkDeb.py
src/Components/TkDeb/Components/: Inspector.py  Matcher.py  SystemTheme.py  View.py  WidgetProperties.py  WidgetTree.py
src/Components/TkDeb/Pages/: InitPage.py  MainPage.py
src/Resources/Dumps/: dump.txt  sounder_dump.txt
src/Resources/Settings/: Settings.json  Updates.json
src/Setup/: MIT.txt  Setup.iss
src/le/: Cargo.toml
src/le/src/: lib.rs
updates/: changelog.txt  hash.txt  version.txt
