[package]
name = "le"
version = "0.1.0"
authors = ["Mateusz Perczak <40388335+losek1@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "le"
crate-type = ["cdylib"]

[dependencies]
levenshtein = "1.0.4"

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]